--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -2,6 +2,7 @@ body {
   overflow: hidden;
   padding: 0;
   margin: 0;
+  background-image: linear-gradient(180deg, #7700ff 0%, rgb(68, 0, 255) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,10 +17,10 @@ body {
   background: white;
   border-radius: 30px;
   width: 25vw;
-  height: 100vh;
+  height: 80vh;
   position: absolute;
-  /* top: calc(50% - 150px / 2); */
-  left: calc(50% - 50vh / 2);
+  top: 10vh;
+  left: 37.5vw;
   display: flex;
   justify-content: center;
   align-items: center;
